Use urlPrefix. Fix band site controller. Use out of box redactor.css.

--- a/app/assets/stylesheets/themes/press-play/import/global.css.scss
+++ b/app/assets/stylesheets/themes/press-play/import/global.css.scss
@@ -6,7 +6,7 @@ body {
   padding: 0;
   font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
   font-size: 15px;
-  line-height: 1.5em;
+  line-height: 1.45em;
   color: #000;
   background-color: #000;
   overflow: hidden;
