--- a/app/assets/stylesheets/themes/press-play/import/pages.css.scss
+++ b/app/assets/stylesheets/themes/press-play/import/pages.css.scss
@@ -23,7 +23,7 @@
   }
 
   div, p, ul, ol, table, dl, blockquote, pre {
-    line-height: 1.5em;
+    line-height: 1.45em;
     font-family: Arial, Helvetica, Verdana, Tahoma, sans-serif;
     font-size: 15px;
   }
